--- a/TanksGame/TanksGame.vcxproj.filters
+++ b/TanksGame/TanksGame.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Maths.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Tank.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
