tank wraps to ground

--- a/TanksGame/TanksGame.vcxproj.filters
+++ b/TanksGame/TanksGame.vcxproj.filters
@@ -35,5 +35,11 @@
     <ClInclude Include="Tank.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Explosion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
