--- a/TanksGame/TanksGame.vcxproj
+++ b/TanksGame/TanksGame.vcxproj
@@ -135,6 +135,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Data.h" />
+    <ClInclude Include="Explosion.h" />
+    <ClInclude Include="Input.h" />
     <ClInclude Include="Maths.h" />
     <ClInclude Include="Screen.h" />
     <ClInclude Include="Tank.h" />
